--- a/_config.yml
+++ b/_config.yml
@@ -176,7 +176,7 @@ myProjects:
   enable: true
   data:
     hexo-theme-matery:
-      icon: fa-meetup
+      icon: fa-file-alt
       iconBackground: 'linear-gradient(to bottom right, #66BB6A 0%, #81C784 100%)'
       url: http://github.com/blinkfox/hexo-theme-matery
       desc: This is a Hexo blog theme with 'Material Design' and responsive design.
@@ -186,7 +186,7 @@ myProjects:
         url: https://github.com/blinkfox/zealot
         desc: 一个轻量级的SQL和参数动态生成工具库
     typora-vue-theme:
-        icon: fa-file-text-o
+        icon: fa-file-alt
         iconBackground: 'linear-gradient(to bottom right, #29B6F6 0%, #1E88E5 100%)'
         url: https://github.com/blinkfox/typora-vue-theme
         desc: This is a typora theme inspired by Vue document style.
