--- a/_config.yml
+++ b/_config.yml
@@ -3,25 +3,28 @@
 menu:
   Index:
     url: /
-    icon: fa-home
+    icon: fas fa-home
   Tags:
     url: /tags
-    icon: fa-tags
+    icon: fas fa-tags
   Categories:
     url: /categories
-    icon: fa-bookmark
+    icon: fas fa-bookmark
   Archives:
     url: /archives
-    icon: fa-archive
+    icon: fas fa-archive
+    children:
+      - name: 123
+        icon: fas fa-archive
   About:
     url: /about
-    icon: fa-user-circle
+    icon: fas fa-user-circle
   #Contact:
     #url: /contact
-    #icon: fa-comments
+    #icon: fas fa-comments
   Friends:
     url: /friends
-    icon: fa-address-book
+    icon: fas fa-address-book
 
 # Website start time.
 # 站点运行开始时间.
@@ -98,20 +101,20 @@ logo: /medias/logo.png
 indexbtn:
   enable: true
   name: Github
-  icon: fa-github-alt
+  icon: fab fa-github-alt
   url: https://github.com/blinkfox/hexo-theme-matery
 
 # The configurations of the second line of home banner
 # icon/button will not show up if you leave the corresponding socialLink empty
 # 首页 banner 中的第二行个人信息配置，留空即不启用
 socialLink:
-  github: 
-  email: 
-  facebook: 
-  twitter: 
-  qq: 
-  weibo: 
-  zhihu: 
+  github: 123
+  email: 132
+  facebook: 123
+  twitter: 123
+  qq: 123
+  weibo: 123
+  zhihu: 123
   rss: true
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
@@ -182,17 +185,17 @@ myProjects:
   enable: true
   data:
     hexo-theme-matery:
-      icon: fa-file-alt
+      icon: fas fa-file-alt
       iconBackground: 'linear-gradient(to bottom right, #66BB6A 0%, #81C784 100%)'
       url: http://github.com/blinkfox/hexo-theme-matery
       desc: This is a Hexo blog theme with 'Material Design' and responsive design.
     zealt:
-        icon: fa-database
+        icon: fas fa-database
         iconBackground: 'linear-gradient(to bottom right, #F06292 0%, #EF5350 100%)'
         url: https://github.com/blinkfox/zealot
         desc: 一个轻量级的SQL和参数动态生成工具库
     typora-vue-theme:
-        icon: fa-file-alt
+        icon: fas fa-file-alt
         iconBackground: 'linear-gradient(to bottom right, #29B6F6 0%, #1E88E5 100%)'
         url: https://github.com/blinkfox/typora-vue-theme
         desc: This is a typora theme inspired by Vue document style.
