添加百度分析

--- a/_config.yml
+++ b/_config.yml
@@ -309,6 +309,12 @@ googleAnalytics:
   enable: false
   id:
 
+# Add baidu analytics configuration
+# 添加 baidu Analytics 配置
+baiduAnalytics:
+  enable: false
+  id: 
+
 # The used front-end library can be replaced with the corresponding CDN address as needed,
 # If the specific version is not specified below, you can use the latest version.
 # 使用到的前端库，可按需替换成对应的CDN地址，如果下面未指定具体的版本号，使用最新的版本即可.
