--- a/_config.yml
+++ b/_config.yml
@@ -320,6 +320,9 @@ googleAnalytics:
 baiduAnalytics:
   enable: false
   id: 
+  
+# 百度搜索资源平台提交链接
+baiduPush: true
 
 # The used front-end library can be replaced with the corresponding CDN address as needed,
 # If the specific version is not specified below, you can use the latest version.
