--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,14 @@ indexbtn:
 # icon/button will not show up if you leave the corresponding socialLink empty
 # 首页 banner 中的第二行个人信息配置，留空即不启用
 socialLink:
-  github: 
-  email: 
-  facebook: 
-  twitter: 
-  qq: 
-  weibo: 
-  zhihu: 
-  rss: true
+  github:  # https://github.com/xxx
+  email: # xxx@xxx.com
+  facebook: # https://www.facebook.com/xxx
+  twitter: # https://twitter.com/xxx
+  qq: # 123456789
+  weibo: # https://weibo.com/xxx
+  zhihu: # https://www.zhihu.com/xxx
+  rss: true # true、false
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
 # You can add `toc: false` to the Front-matter of a post to turn off the TOC.
