--- a/_config.yml
+++ b/_config.yml
@@ -140,10 +140,10 @@ toc:
   heading: h2, h3, h4
   showToggleBtn: true # 是否显示切换TOC目录展开收缩的按钮
 
-# Whether the code is broken.
-# 代码是否折行
+# 代码块相关
 code:
-  break: true
+  break: false # 代码是否折行
+  copy: true # 代码块是否可复制
 
 # 是否激活文章末尾的打赏功能，默认激活（你替换为的你自己的微信、支付宝二维码图片、或者使用网络图片也可以）.
 reward:
