--- a/_config.yml
+++ b/_config.yml
@@ -490,11 +490,13 @@ navMenu:
   bgColor: " " # 二级侧栏子菜单背景颜色,留空即为全局背景色
 
 # 网页预加载.
-instantpage: true
+instantpage: 
+  enable: true
 
 # banner 是否每日切换.
 # 若为 false, 则 banner 默认为 /medias/banner/0.jpg
-banner: true
+banner: 
+  enable: true
 
 #ICP备案信息尾部显示
 icp:
