--- a/_config.yml
+++ b/_config.yml
@@ -142,9 +142,10 @@ toc:
 
 # 代码块相关
 code:
-  break: false # 代码是否折行
+  lang: true # 代码块是否显示名称
   copy: true # 代码块是否可复制
   shrink: true # 代码块是否可以收缩
+  break: false # 代码是否折行
 
 # 是否激活文章末尾的打赏功能，默认激活（你替换为的你自己的微信、支付宝二维码图片、或者使用网络图片也可以）.
 reward:
