默认关闭动态彩带，减少 CPU 占用

--- a/_config.yml
+++ b/_config.yml
@@ -468,7 +468,7 @@ ribbon:
 
 # 背景动态彩带.
 ribbon_dynamic:
-  enable: true
+  enable: false
 
 # sharejs文章分享模块.
 # 支持顺序，可选项目为twitter, facebook, google, qq, qzone, wechat, weibo, douban, linkedin.
