在线音乐列表的feature
up

Revert "加入免费CDN，大幅提高网页访问速度；修复移动端留言板依然显示contact的问题"

This reverts commit cab56331

Signed-off-by: Civin <Civin@bupt.edu.cn>

--- a/_config.yml
+++ b/_config.yml
@@ -72,18 +72,18 @@ dream:
 # Whether to display the musics.
 # 是否在首页显示音乐.
 music:
-  enable: false
-  showTitle: true
-  title: 听听音乐
-  fixed: false # 开启吸底模式
+  enable: true
+  title: #非吸底模式有效
+    enable: true
+    show: 听听音乐
+  fixed: true # 开启吸底模式
   autoplay: false # 是否自动播放
   theme: '#42b983'
   loop: 'all' # 音频循环播放, 可选值: 'all', 'one', 'none'
-  order: 'list' # 音频循环顺序, 可选值: 'list', 'random'
+  order: 'random' # 音频循环顺序, 可选值: 'list', 'random'
   preload: 'auto' # 预加载，可选值: 'none', 'metadata', 'auto'
   volume: 0.7 # 默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
-  listFolded: false # 列表默认折叠
-  listMaxHeight: #列表最大高度
+  listFolded: true # 列表默认折叠
 
 # Whether to display the videos.
 # 是否在首页显示视频.
