--- a/_config.yml
+++ b/_config.yml
@@ -76,14 +76,17 @@ music:
   title: #非吸底模式有效
     enable: true
     show: 听听音乐
-  fixed: true # 开启吸底模式
-  autoplay: false # 是否自动播放
+  server: netease   #require	music platform: netease, tencent, kugou, xiami, baidu
+  type: playlist	#require song, playlist, album, search, artist
+  id: 503838841     #require	song id / playlist id / album id / search keyword
+  fixed: true       # 开启吸底模式
+  autoplay: false   # 是否自动播放
   theme: '#42b983'
-  loop: 'all' # 音频循环播放, 可选值: 'all', 'one', 'none'
-  order: 'random' # 音频循环顺序, 可选值: 'list', 'random'
-  preload: 'auto' # 预加载，可选值: 'none', 'metadata', 'auto'
-  volume: 0.7 # 默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
-  listFolded: true # 列表默认折叠
+  loop: 'all'       # 音频循环播放, 可选值: 'all', 'one', 'none'
+  order: 'random'   # 音频循环顺序, 可选值: 'list', 'random'
+  preload: 'auto'   # 预加载，可选值: 'none', 'metadata', 'auto'
+  volume: 0.7       # 默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
+  listFolded: true  # 列表默认折叠
 
 # Whether to display the videos.
 # 是否在首页显示视频.
