--- a/_config.yml
+++ b/_config.yml
@@ -325,7 +325,12 @@ minivaline:
   placeholder: Write a Comment # Comment box placeholder
   adminEmailMd5: # The MD5 of Admin Email to show Admin Flag.
   math: true # Support MathJax.
-  lang: en # Available values: en | es-ES | fr | ru | zh-CN | zh-TW
+  md: true # Support Markdown.
+  # MiniValine's display language depends on user's browser or system environment
+  # If you want everyone visiting your site to see a uniform language, you can set a force language value
+  # Available values: en  | zh-CN | (and many more)
+  # More i18n info: https://github.com/MiniValine/minivaline-i18n
+  language:
   
   
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
