--- a/_config.yml
+++ b/_config.yml
@@ -330,7 +330,7 @@ minivaline:
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
   # Available values: en  | zh-CN | (and many more)
   # More i18n info: https://github.com/MiniValine/minivaline-i18n
-  language:
+  lang:
   
   
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
