--- a/_config.yml
+++ b/_config.yml
@@ -547,3 +547,7 @@ icp:
 # 更多关于访问速度优化，请查看：https://blog.sky03.cn/posts/42790.html
 jsDelivr:
   url: # https://cdn.jsdelivr.net/gh/skyls03/skyls03.github.io
+
+# Live2d 看板娘
+live2d:
+  enable: false
