--- a/_config.yml
+++ b/_config.yml
@@ -574,3 +574,14 @@ icp:
 # 更多关于访问速度优化，请查看：https://blog.sky03.cn/posts/42790.html
 jsDelivr:
   url: # https://cdn.jsdelivr.net/gh/skyls03/skyls03.github.io
+  
+# 网站背景图
+background:
+  enable: false
+  url: "https://cdn.jsdelivr.net/gh/Tokisaki-Galaxy/res/site/medias/background.jpg"
+
+# 说说 https://artitalk.js.org/
+artitalk:
+  enable: true
+  appId: xxxxx
+  appKey: xxxxxx
