--- a/_config.yml
+++ b/_config.yml
@@ -405,6 +405,8 @@ baiduPush: true
 # 使用到的前端库，可按需替换成对应的CDN地址，如果下面未指定具体的版本号，使用最新的版本即可.
 libs:
   css:
+    matery: /css/matery.css
+    search: /js/search.js
     fontAwesome: /libs/awesome/css/all.css # V5.11.1
     materialize: /libs/materialize/materialize.min.css # 1.0.0
     aos: /libs/aos/aos.css
