--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# main menu navigation url and icon
-# 配置菜单导航的名称、路径和图标icon.
+# Main menu navigation url and icon
+# 配置菜单导航的名称、路径和图标
 menu:
   Index:
     url: /
@@ -39,8 +39,8 @@ menu:
   #      url: /galleries
   #      icon: fas fa-image
 
-# Website start time.
-# 站点运行开始时间.
+# Website start time
+# 站点运行开始时间
 time:
   enable: false
   year: 2019 # 年份
@@ -50,48 +50,48 @@ time:
   minute: 00 # 分钟
   second: 00 # 秒
 
-# Index cover carousel configuration.
-# 首页封面轮播图的相关配置.
+# Index cover carousel configuration
+# 首页封面轮播图的相关配置
 cover:
-  showPrevNext: true # 是否显示左右切换按钮. Whether to display the left and right toggle buttons.
-  showIndicators: true # 是否显示指示器. # Whether to display the indicators
-  autoLoop: true # 是否自动轮播. Whether it is automatically rotated.
-  duration: 120 # 切换延迟时间. Switching delay time.
-  intervalTime: 5000 # 自动切换下一张的间隔时间. Automatically switch the interval of the next one.
-  useConfig: false # 是否使用配置文件, 在 _data/covers.json 下配置推荐文章, false则使用主题在文章中的配置 cover coverImg
-  # useConfig 使用方式: 将主题 hexo-theme-matery/source/_data/covers.json 移动到 my-blog/source/_data/下修改配置即可
+  showPrevNext: true # 是否显示左右切换按钮 - Whether to display the left and right toggle buttons
+  showIndicators: true # 是否显示指示器 - Whether to display the indicators
+  autoLoop: true # 是否自动轮播 - Whether it is automatically rotated
+  duration: 120 # 切换延迟时间 - Switching delay time
+  intervalTime: 5000 # 自动切换下一张的间隔时间. Automatically switch the interval of the next one
+  useConfig: false # 是否使用配置文件, 在 _data/covers.json 下配置推荐文章, false 则使用主题在文章中的配置 cover coverImg
+  # useConfig 使用方式：将主题 hexo-theme-matery/source/_data/covers.json 移动到 my-blog/source/_data/ 下修改配置即可
 
-# index page dream text,
-# 配置首页显示"梦想"的语句.
+# Index page dream text
+# 配置首页显示“梦想”的语句
 dream:
   enable: true
   showTitle: true
   title: 我的梦想
   text: 不是每个人都应该像我这样去建造一座水晶大教堂，但是每个人都应该拥有自己的梦想，设计自己的梦想，追求自己的梦想，实现自己的梦想。梦想是生命的灵魂，是心灵的灯塔，是引导人走向成功的信仰。有了崇高的梦想，只要矢志不渝地追求，梦想就会成为现实，奋斗就会变成壮举，生命就会创造奇迹。——罗伯·舒乐
 
-# Whether to display the musics.
-# 是否在首页显示音乐.
+# Whether to display the musics
+# 是否在首页显示音乐
 music:
   enable: true
-  title: #非吸底模式有效
+  title: # 非吸底模式有效
     enable: true
     show: 听听音乐
   autoHide: true    # hide automaticaly
-  server: netease   #require	music platform: netease, tencent, kugou, xiami, baidu
-  type: playlist    #require song, playlist, album, search, artist
-  id: 503838841     #require	song id / playlist id / album id / search keyword
+  server: netease   # require	music platform: netease, tencent, kugou, xiami, baidu
+  type: playlist    # require song, playlist, album, search, artist
+  id: 503838841     # require	song id / playlist id / album id / search keyword
   fixed: true       # 开启吸底模式
   autoplay: false   # 是否自动播放
   theme: '#42b983'
-  loop: 'all'       # 音频循环播放, 可选值: 'all', 'one', 'none'
-  order: 'random'   # 音频循环顺序, 可选值: 'list', 'random'
-  preload: 'auto'   # 预加载，可选值: 'none', 'metadata', 'auto'
+  loop: 'all'       # 音频循环播放, 可选值：'all'，'one'，'none'
+  order: 'random'   # 音频循环顺序, 可选值：'list'，'random'
+  preload: 'auto'   # 预加载，可选值：'none'，'metadata'，'auto'
   volume: 0.7       # 默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
   listFolded: true  # 列表默认折叠
   hideLrc: true     # 隐藏歌词
 
-# Whether to display the videos.
-# 是否在首页显示视频.
+# Whether to display the videos
+# 是否在首页显示视频
 video:
   enable: false
   showTitle: true
@@ -103,7 +103,7 @@ video:
   autoplay: false # 是否自动播放
   theme: '#42b983'
   loop: false # 是否循环播放
-  preload: 'auto' # 预加载，可选值: 'none', 'metadata', 'auto'
+  preload: 'auto' # 预加载，可选值：'none'，'metadata'，'auto'
   volume: 0.7
 
 # Whether to display the title of the recommended posts
@@ -111,17 +111,17 @@ video:
 recommend:
   enable: true
   showTitle: true
-  useConfig: false # 是否使用配置文件, 在 _data/recommends.json 下配置推荐文章, false则会走主题配置的 top 属性
-  # useConfig 使用方式: 将主题 hexo-theme-matery/source/_data/recommends.json 移动到 my-blog/source/_data/下修改配置即可
+  useConfig: false # 是否使用配置文件，在 _data/recommends.json 下配置推荐文章，false 则会走主题配置的 top 属性
+  # useConfig 使用方式：将主题 hexo-theme-matery/source/_data/recommends.json 移动到 my-blog/source/_data/ 下修改配置即可
 
 # Configure website favicon and LOGO
-# 配置网站favicon和网站LOGO
+# 配置网站 favicon 和网站 LOGO 图片
 favicon: /favicon.png
 logo: /medias/logo.png
 
 # The configuration of the second button in the home banner,
 # including the display name of the button, the font awesome icon, and the hyperlink to the button.
-# 首页 banner 中的第二个按钮的配置，包括按钮的显示名称、font awesome图标和按钮的超链接.
+# 首页 banner 中的第二个按钮的配置，包括按钮的显示名称、font awesome 图标和按钮的超链接
 indexbtn:
   enable: true
   name: Github
@@ -143,13 +143,13 @@ socialLink:
 
 # Whether to activate the Post TOC, and Configure which title types are supported by TOC support.
 # You can add `toc: false` to the Front-matter of a post to turn off the TOC.
-# 是否激活文章 TOC 功能，并配置TOC支持选中哪些标题类型，这是全局配置。
-# 可以在某篇文章的 Front-matter 中再加上`toc: false`，使该篇文章关闭TOC目录功能
+# 是否激活文章 TOC 功能，并配置 TOC 支持选中哪些标题类型，这是全局配置
+# 可以在某篇文章的 Front-matter 中再加上 "toc: false"，使该篇文章关闭 TOC 目录功能
 toc:
   enable: true
   heading: h2, h3, h4
   collapseDepth: 0 # 目录默认展开层级
-  showToggleBtn: true # 是否显示切换TOC目录展开收缩的按钮
+  showToggleBtn: true # 是否显示切换 TOC 目录展开收缩的按钮
 
 # 代码块相关
 code:
@@ -158,7 +158,7 @@ code:
   shrink: true # 代码块是否可以收缩
   break: false # 代码是否折行
 
-# 是否激活文章末尾的打赏功能，默认激活（你替换为的你自己的微信、支付宝二维码图片、或者使用网络图片也可以）.
+# 是否激活文章末尾的打赏功能，默认激活（你替换为的你自己的微信、支付宝二维码图片、或者使用网络图片也可以）
 reward:
   enable: true
   title: 你的赏识是我前进的动力
@@ -167,17 +167,17 @@ reward:
 
 # Whether to activate the copyright information of the blog and author when copying the post content.
 # minCharNumber: Approve copyright information by copying at least how many characters.
-# 是否激活复制文章时追加博客和作者的版权信息.
+# 是否激活复制文章时追加博客和作者的版权信息
 copyright:
   enable: false
-  minCharNumber: 120 # 至少复制多少个字符就追加版权信息.
+  minCharNumber: 120 # 至少复制多少个字符就追加版权信息
   description: 本文章著作权归作者所有，任何形式的转载都请注明出处。
 
-# Whether to activate the mathjax, this is a global configuration, but the post still does not open the mathjax rendering.
-# Considering that the mathjax loading is time consuming,
+# Whether to activate the MathJax, this is a global configuration, but the post still does not open the mathjax rendering.
+# Considering that the MathJax loading is time consuming,
 # you also need to add `mathjax: true` to the Front-matter of the post that needs to be rendered.
-# 是否激活mathjax数学公式，这是全局配置，但文章仍然不会都开启mathjax渲染，
-# 考虑到mathjax加载比较耗时，你还需要在需要渲染的文章的Front-matter中再加上`mathjax: true`才行.
+# 是否激活 MathJax 数学公式，这是全局配置，但文章仍然不会都开启 MathJax 渲染
+# 考虑到 MathJax 加载比较耗时，你还需要在需要渲染的文章的 Front-matter 中再加上 "mathjax: true" 才行
 mathjax:
   enable: false
   cdn: https://cdn.bootcss.com/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML
@@ -186,7 +186,7 @@ mathjax:
 # Before you activate, please confirm that you have installed the hexo-wordcount plugin,
 # install the plugin command: `npm i --save hexo-wordcount`.
 # 文章字数统计、阅读时长、总字数统计等
-# 文章信息--若要开启文章字数统计，需要安装 hexo-wordcount 插件，安装命令: `npm i --save hexo-wordcount`
+# 文章信息 -- 若要开启文章字数统计，需要安装 hexo-wordcount 插件，安装命令: "npm i --save hexo-wordcount"
 postInfo:
   date: true # 发布日期
   update: false # 更新日期
@@ -196,20 +196,20 @@ postInfo:
   readCount: false # 文章阅读次数
 
 # Whether to activate the 'love' effect of clicking on the page.
-# 是否激活点击页面的'爱心'效果，默认激活.
+# 是否激活点击页面的“爱心”效果，默认激活
 clicklove:
   enable: true
 
-# profile in about page, including avatars, career, and personal introductions.
-# 在”关于”页面中配置个人信息，包括头像、职业和个人介绍.
+# Profile in about page, including avatars, career, and personal introductions.
+# 在“关于”页面中配置个人信息，包括头像、职业和个人介绍
 profile:
   avatar: /medias/avatar.jpg
   career: Software Engineer
   introduction: If you wish to succeed, you should use persistence as your good friend, experience as your reference, prudence as your brother and hope as your sentry.
 
-# config my projects informations in about page.
+# Config my projects informations in about page.
 # If you don't want to display this `My Projects` content, you can deactivate or delete this configuration.
-# 在“关于”页面配置"我的项目"信息，如果你不需要这些信息则可以将其设置为不激活或者将其删除.
+# 在“关于”页面配置“我的项目”信息，如果你不需要这些信息则可以将其设置为不激活或者将其删除
 myProjects:
   enable: true
   data:
@@ -229,9 +229,9 @@ myProjects:
         url: https://github.com/blinkfox/typora-vue-theme
         desc: This is a typora theme inspired by Vue document style.
 
-# config my skills informations in about page.
+# Config my skills informations in about page.
 # If you don't want to display this `My Skills` content, you can deactivate or delete this configuration.
-# 在“关于”页面配置"我的技能"信息，如果你不需要这些信息则可以将其设置为不激活或者将其删除.
+# 在“关于”页面配置“我的技能"信息，如果你不需要这些信息则可以将其设置为不激活或者将其删除
 mySkills:
   enable: true
   data:
@@ -254,9 +254,9 @@ mySkills:
       background: 'linear-gradient(to right, #FFEB3B 0%, #FFF176 100%)'
       percent: 75%
 
-# config gallery of my photos in about page.
+# Config gallery of my photos in about page.
 # If you don't want to display this `Gallery` content, you can deactivate or delete this configuration.
-# 在“关于”页面配置"我的相册"图片，如果你不需要这些信息则可以将其设置为不激活或者将其删除.
+# 在“关于”页面配置“我的相册”图片，如果你不需要这些信息则可以将其设置为不激活或者将其删除
 myGallery:
   enable: true
   data:
@@ -265,10 +265,10 @@ myGallery:
     - /medias/featureimages/2.jpg
 
 # Whether to display post-calender in the `archive` page
-# 设置在归档页面中是否显示'文章日历'控件
+# 设置在归档页面中是否显示“文章日历”控件
 postCalendar: true
 
-# the Gitalk config，default disabled
+# The Gitalk config，default disabled
 # Gitalk 评论模块的配置，默认为不激活
 gitalk:
   enable: false
@@ -279,7 +279,7 @@ gitalk:
     clientSecret:
   admin:
 
-# the Gitment config，default disabled
+# The Gitment config，default disabled
 # Gitment 评论模块的配置，默认为不激活
 gitment:
   enable: false
@@ -289,8 +289,8 @@ gitment:
     clientId:
     clientSecret:
 
-# disqus config, default disabled
-# Disqus评论模块的配置，默认为不激活
+# Disqus config, default disabled
+# Disqus 评论模块的配置，默认为不激活
 disqus:
   enable: false
   shortname:
@@ -303,7 +303,7 @@ livere:
 
 # The configuration of the Valine comment module is not activated by default.
 # To use it, activate the configuration item and set appId and appKey.
-# Valine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey.
+# Valine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey
 valine:
   enable: false
   appId:
@@ -318,7 +318,7 @@ valine:
 
 # The configuration of the MiniValine comment module is not activated by default.
 # To use it, activate the configuration item and set appId and appKey.
-# MiniValine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey.
+# MiniValine 评论模块的配置，默认为不激活，如要使用，就请激活该配置项，并设置 appId 和 appKey
 # See: https://github.com/MiniValine/MiniValine
 minivaline:
   enable: false
@@ -326,13 +326,13 @@ minivaline:
   appKey: itmzT1JbXfAjVwMqDhGPzU45 # Your leancloud application appkey
   mode: DesertsP # DesertsP or xCss
   placeholder: Write a Comment # Comment box placeholder
-  math: true # Support MathJax.
-  md: true # Support Markdown.
-  enableQQ: false # Enable QQ avatar API.
-  NoRecordIP: false # Do not record commenter IP.
-  visitor: true # Article reading statistics.
-  maxNest: 6 # Sub-comment maximum nesting depth.
-  pageSize: 6 # Pagination size.
+  math: true # Support MathJax
+  md: true # Support Markdown
+  enableQQ: false # Enable QQ avatar API
+  NoRecordIP: false # Do not record commenter IP
+  visitor: true # Article reading statistics
+  maxNest: 6 # Sub-comment maximum nesting depth
+  pageSize: 6 # Pagination size
   adminEmailMd5: de8a7aa53d07e6b6bceb45c64027763d # The MD5 of Admin Email to show Admin Flag.[Just Only DesertsP Style mode]
   tagMeta: # The String Array of Words to show Flag.[Just Only xCss Style mode]
     - 管理员
@@ -350,7 +350,7 @@ minivaline:
   # Available values: en  | zh-CN | (and many more)
   # More i18n info: https://github.com/MiniValine/minivaline-i18n
   lang:
-  # Expression Url.
+  # Expression Url
   # https://github.com/MiniValine/MiniValine/blob/master/.github/FAQ.md#how-to-customize-emoticons
   emoticonUrl:
     - https://cdn.jsdelivr.net/npm/alus@latest
@@ -365,7 +365,7 @@ changyan:
   appId:
   conf:
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
-# 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
+# 配置是否在 header 中显示 "fork me on github" 的图标，默认为 true，你可以修改为你的仓库地址
 githubLink:
   enable: true
   url: https://github.com/blinkfox/hexo-theme-matery
@@ -375,8 +375,8 @@ githubLink:
 # activate the configuration item and write the 'password' key and Cipher in the post's Front-matter.
 # Note: In order to ensure that the original password will not be leaked to the web page,
 # the password of the article must be encrypted by 'SHA256' so that it will not be cracked.
-# 阅读文章的密码验证功能，如要使用此功能请激活该配置项，并在对应文章的Front-matter中写上'password'的键和加密后的密文即可.
-# 请注意：为了保证密码原文不会被泄露到网页中，文章的密码必须是通过'SHA256'加密的，这样就不会被破解.
+# 阅读文章的密码验证功能，如要使用此功能请激活该配置项，并在对应文章的 Front-matter中 写上 “password” 的键和加密后的密文即可
+# 请注意：为了保证密码原文不会被泄露到网页中，文章的密码必须是通过 “SHA256” 加密的，这样就不会被破解
 verifyPassword:
   enable: false
   promptMessage: 请输入访问本文章的密码
@@ -405,9 +405,9 @@ baiduAnalytics:
 baiduPush: true
 
 # The used front-end library can be replaced with the corresponding CDN address as needed,
-# If the specific version is not specified below, you can use the latest version.
-# 使用到的前端库，可按需替换成对应的CDN地址，如果下面未指定具体的版本号，使用最新的版本即可.
-# 注：jsdelivr可以自动帮你生成.min版的js和css，所以你在设置js及css路径中可以直接写.min.xxx
+# if the specific version is not specified below, you can use the latest version.
+# 使用到的前端库，可按需替换成对应的 CDN 地址，如果下面未指定具体的版本号，使用最新的版本即可
+# 注：jsDelivr 可以自动帮你生成 .min 版的js和css，所以你在设置 js 及 css 路径中可以直接写 .min.xxx
 libs:
   css:
     matery: /css/matery.css
@@ -438,7 +438,7 @@ libs:
     crypto: /libs/cryptojs/crypto-js.min.js
     echarts: /libs/echarts/echarts.min.js
     gitalk: /libs/gitalk/gitalk.min.js
-    valine: /libs/valine/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js  默认为 /libs/valine/Valine.min.js
+    valine: /libs/valine/Valine.min.js # 若想保持最新版，请替换为 https://unpkg.com/valine/dist/Valine.min.js；默认为 /libs/valine/Valine.min.js
     minivaline: /libs/minivaline/MiniValine.js
     jqcloud: /libs/jqcloud/jqcloud-1.0.4.min.js
     tocbot: /libs/tocbot/tocbot.min.js
@@ -449,7 +449,7 @@ libs:
     instantpage: /libs/instantpage/instantpage.js
 
 # The post featured images that needs to be displayed when there is no image.
-# 无文章特色图片时需要显示的文章特色图片.
+# 无文章特色图片时需要显示的文章特色图片
 featureImages:
 - /medias/featureimages/0.jpg
 - /medias/featureimages/1.jpg
@@ -480,7 +480,7 @@ featureImages:
 # default 配置文章的默认转载规则
 
 # you can define reprint policy for a single article in the front-matter of the specific md file using this key: reprintPolicy
-# 您可以使用在文章md文件的 front-matter 中指定 reprintPolicy 来给单个文章配置转载规则
+# 您可以使用在文章 md 文件的 front-matter 中指定 reprintPolicy 来给单个文章配置转载规则
 
 # 可用的转载规则有（available reprint policies are）：
 # 这些转载规则的意义请参考(you can refer to this link FMI)：https://creativecommons.org/choose/?lang=zh
@@ -500,49 +500,51 @@ reprint:
   default: cc_by
 
 # DaoVoice online contact
+# 配置 DaoVoice 在线联系功能
 daovoice:
   enable: false
   app_id:
 
 # Tidio online contact
+# 配置 Tidio 在线联系功能
 tidio:
   enable: false
   public_key:
 
-#背景canvas-nest
+# 背景 canvas-nest 特效
 canvas_nest:
   enable: false
-  color: 0,0,255 # 线条颜色, 默认: '0,0,0' ；三个数字分别为(R,G,B)，注意用,分割
-  pointColor: 0,0,255 # 交点颜色, 默认: '0,0,0' ；三个数字分别为(R,G,B)，注意用,分割
-  opacity: 0.7 # 线条透明度（0~1）, 默认: 0.5
-  zIndex: -1 # 背景的 z-index 属性，css 属性用于控制所在层的位置, 默认: -1.
-  count: 99 # 线条的总数量, 默认: 99
+  color: 0,0,255 # 线条颜色；默认：'0,0,0' ；三个数字分别为(R,G,B)，注意用 , 分割
+  pointColor: 0,0,255 # 交点颜色；默认：'0,0,0' ；三个数字分别为(R,G,B)，注意用 , 分割
+  opacity: 0.7 # 线条透明度（0~1）；默认：0.5
+  zIndex: -1 # 背景的 z-index 属性，css 属性用于控制所在层的位置；默认：-1.
+  count: 99 # 线条的总数量；默认：99
 
-# 背景静止彩带.
+# 背景静止彩带
 ribbon:
   enable: false
-  size: 150 # 彩带大小, 默认: 90.
-  alpha: 0.6 # 彩带透明度 (0 ~ 1), 默认: 0.6.
-  zIndex: -1 # 背景的z-index属性，css属性用于控制所在层的位置, 默认: -1.
-  clickChange: false  # 设置是否每次点击都更换彩带.
+  size: 150 # 彩带大小；默认：90
+  alpha: 0.6 # 彩带透明度 (0 ~ 1)；默认：0.6
+  zIndex: -1 # 背景的 z-index 属性，css 属性用于控制所在层的位置；默认：-1
+  clickChange: false # 设置是否每次点击都更换彩带
 
-# 背景动态彩带.
+# 背景动态彩带
 ribbon_dynamic:
   enable: false
 
-# sharejs文章分享模块.
-# 支持顺序，可选项目为twitter, facebook, google, qq, qzone, wechat, weibo, douban, linkedin.
+# ShareJS 文章分享模块
+# 支持顺序，可选项目为 twitter，facebook，google，qq，qzone，wechat，weibo，douban，linkedin
 sharejs:
   enable: true
   sites: twitter,facebook,google,qq,qzone,wechat,weibo,douban,linkedin
 
-# addthis文章分享模块.
+# AddThis 文章分享模块
 addthis:
   enable: false
-  pubid:  # 前往https://www.addthis.com/获取
+  pubid: # 前往 https://www.addthis.com 获取
 
-# 打字效果副标题.
-# 如果有符号 ‘ ，请在 ’ 前面加上 \
+# 打字效果副标题
+# 如果有符号 ‘ ，请在 ’ 前面加上 \ 进行转移
 subtitle:
   enable: true
   loop: true # 是否循环
@@ -553,44 +555,44 @@ subtitle:
   sub1: 从来没有真正的绝境, 只有心灵的迷途
   sub2: Never really desperate, only the lost of the soul
 
-# 手机二级菜单.
+# 手机二级菜单
 navMenu:
   mleft: false # 二级侧栏子菜单是否对齐左边
-  bgColor: " " # 二级侧栏子菜单背景颜色,留空即为全局背景色
+  bgColor: " " # 二级侧栏子菜单背景颜色，留空即为全局背景色
 
-# 网页预加载.
+# 网页预加载
 instantpage:
   enable: true
 
-# banner 是否每日切换.
-# 若为 false, 则 banner 默认为 /medias/banner/0.jpg
+# banner 是否每日切换
+# 若为 false，则 banner 默认为 /medias/banner/0.jpg
 banner:
   enable: true
 
-#ICP备案信息尾部显示
+# ICP 备案信息尾部显示
 icp:
   enable: false
   url: # 备案链接
   text: # 备案信息
 
-# CDN访问加速 
-# 第一次使用本功能，一定要先配置url，再`hexo cl && hexo g && hexo d`部署到GitHub的仓库，注意！必须是GitHub的仓库！
-# 如果必须要使用国内的coding或者gitee，可以采用双部署，同时将网站部署到两个仓库（其中一个必须是GitHub的仓库）
-# URL配置规则（例子如下）： https://cdn.jsdelivr.net/gh/你的GitHub用户名/你的仓库名
-# 如果想关闭此功能，将 url地址 注释或删除即可！
-#
-# 注：配置了此项，就代表着本地调试的时候，网站依然会去GitHub请求资源（原来的资源），本地调试的时候记得将 此项配置 注释或者删除掉
+# CDN 访问加速
+# 第一次使用本功能，一定要先配置 URL，再 "hexo cl && hexo g && hexo d" 部署到 GitHub 的仓库（注意必须是 GitHub 的仓库）
+# 如果必须要使用国内的 Coding 或者 Gitee，可以采用双部署，同时将网站部署到两个仓库（其中一个必须是 GitHub 的仓库）
+# URL 配置规则（例子如下）：https://cdn.jsdelivr.net/gh/你的GitHub用户名/你的仓库名
+# 如果想关闭此功能，将 URL 地址注释或删除即可！
+
+# 注：配置了此项，就代表着本地调试的时候，网站依然会去 GitHub 请求资源（原来的资源），本地调试的时候记得将此项配置注释或者删除掉
 # 更多关于访问速度优化，请查看：https://blog.sky03.cn/posts/42790.html
-# 注：jsdelivr可以自动帮你生成.min版的js和css，所以你在上面设置js及css路径中可以直接写.min.xxx
+# 注：jsDelivr 可以自动帮你生成 .min 版的 js 和 css，所以你在上面设置 js 及 css 路径中可以直接写 .min.xxx
 jsDelivr:
   url: # https://cdn.jsdelivr.net/gh/skyls03/skyls03.github.io
-  
+
 # 网站背景图
 background:
   enable: false
   url: "https://cdn.jsdelivr.net/gh/Tokisaki-Galaxy/res/site/medias/background.jpg"
 
-# 说说 https://artitalk.js.org/
+# 说说 https://artitalk.js.org
 artitalk:
   enable: false
   appId: xxxxx
