--- a/_config.yml
+++ b/_config.yml
@@ -599,3 +599,11 @@ artitalk:
   enable: false
   appId: xxxxx
   appKey: xxxxxx
+
+## 哔哔功能配置
+## 关注公众号 "黑石哔哔"，发送: //bindCurrentUser:你的APPID,你的MASTERKEY,你的RESTAPI 
+## 可用leancloud国际版，国际版api为 https://appid前八位.api.lncldglobal.com 
+bbtime:
+ appId: 你的appId
+ appKey: 你的appKey
+ serverURLs: https://你的api
