去除了对 hexo-prism-plugin 的依赖，支持 Hexo5.0 的 prismjs 的代码高亮渲染

--- a/_config.yml
+++ b/_config.yml
@@ -434,6 +434,7 @@ libs:
     gitalk: /libs/gitalk/gitalk.css
     jqcloud: /libs/jqcloud/jqcloud.css
     tocbot: /libs/tocbot/tocbot.css
+    prism: /libs/prism/prism.css
   js:
     matery: /js/matery.js
     jquery: /libs/jquery/jquery.min.js
