--- a/_config.yml
+++ b/_config.yml
@@ -372,9 +372,30 @@ changyan:
 utterances:
  enable: true
  repo: txmu/utterances
- issue-term: pathname # 不能更改，除非你修改了utterances.ejs
  theme: github-light
  crossorigin: anonymous
+
+# DisqusJS
+# Alternative Disqus - Render comment component using Disqus API.
+# Demo: https://suka.js.org/DisqusJS/
+# For more information: https://github.com/SukkaW/DisqusJS
+disqusjs:
+  enable: false
+  # API Endpoint of Disqus API (https://disqus.com/api/).
+  # Leave api empty if you are able to connect to Disqus API. Otherwise you need a reverse proxy for it.
+  # For example:
+  # api: https://disqus.skk.moe/disqus/
+  api:
+  apikey: # Register new application from https://disqus.com/api/applications/
+  shortname: # See: https://disqus.com/admin/settings/general/
+
+# Vssue 
+# 教程:https://vssue.js.org/zh/，以下配置项必须按照官网的格式填写。有问题第一时间别直接发issue，而是先去自己解决。
+vssue:
+ enable: false # 由于vssue本身的问题，所有页面所有的评论都可能会关联到以这个title为题目的issue，导致评论混乱。这个问题我（txmu）已经发过issue了，还没有收到回复。因此用不用这个见仁见智。
+ owner:
+ repo:
+ clientid: 
 
 # Whether to display fork me on github icon and link, default true, You can change it to your repo address
 # 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
