加入valine酷q通知

--- a/_config.yml
+++ b/_config.yml
@@ -327,6 +327,7 @@ valine:
   pageSize: 10
   placeholder: 'just go go' # Comment Box placeholder
   background: /medias/comment_bg.png
+  coolpushkey: 
 
 # The configuration of the MiniValine comment module is not activated by default.
 # To use it, activate the configuration item and set appId and appKey.
